# Redoc

./: .gitignore  README.md
backend/: Dockerfile  pyproject.toml  railway.toml  requirements.txt  run.py
backend/app/: config.py  main.py
backend/app/api/: documents.py  query.py  theme_identification.py  upload.py
backend/app/core/: init_db.py
backend/app/models/: document.py
backend/app/services/: document_service.py  ocr.py  text_analysis.py  theme_identification.py
backend/app/services/vectorstore/: document_indexing.py  gemini_embeddings.py  query_engine.py  query_processor.py
chatbot_theme_identifier/backend/: requirements.txt
chatbot_theme_identifier/backend/app/: config.py  main.py
chatbot_theme_identifier/backend/data/: 155_2025017539.txt
chatbot_theme_identifier/frontend/: package-lock.json  package.json
chatbot_theme_identifier/frontend/src/: App.tsx
docs/: api.md  architecture.md  user.md
frontend/: index.html  package-lock.json  package.json  railway.toml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdvancedFilters.tsx  DocumentList.tsx  DocumentUpload.tsx  DocumentViewer.tsx  EnhancedDocumentViewer.tsx  Header.tsx  LargeDocumentAnalyzer.tsx  QueryInterface.tsx  ResultDisplay.tsx  ThemeCitationVisualizer.tsx  ThemeDisplay.tsx  (+1 more)
tests/: README.md  conftest.py  run_tests.py  test.md
tests/integration/: test_document_api.py  test_query_api.py  test_theme_api.py
tests/unit/: conftest.py  test_document_service.py  test_ocr.py  test_text_analyzer.py  test_theme_identification.py
(+24 files in other folders)
