[project]
name = "Redoc-backend"
version = "0.1.0"
description = "Document and Theme identification chatbot"
readme = "README.md"
requires-python = ">=3.10"

# Core production dependencies only
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.34.0,<0.35.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.9.0,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "sqlalchemy>=2.0.40,<2.1.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "PyMuPDF>=1.25.0,<2.0.0",
    "pytesseract>=0.3.13,<1.0.0",
    "pillow>=11.0.0,<12.0.0",
    "google-generativeai>=0.8.0,<1.0.0",
    "langchain>=0.3.25,<0.4.0",
    "langchain-chroma>=0.2.4,<0.3.0",
    "langchain-community>=0.3.24,<0.4.0",
    "chromadb>=1.0.9,<2.0.0",
    "nltk>=3.9.0,<4.0.0",
    "requests>=2.32.0,<3.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "click>=8.1.0,<9.0.0",
    "certifi>=2025.4.0",
    "charset-normalizer>=3.4.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

# Alternative database drivers (more cross-platform)
postgres-alt = [
    "asyncpg>=0.29.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"] 